--- a/src/content/pages/Bios/Nery.html
+++ b/src/content/pages/Bios/Nery.html
@@ -35,7 +35,7 @@
         </div>
         <div class="bio-es">
             <p>
-                <justify><i>Nery González</i> Es un estudiante de doctorado de Venezuela. Realizó sus estudios de licenciatura en Sociología en la Universidad Central de Venezuela. Actualmente investiga Literatura diaspórica y narrativas transnacionales desde el Caribe.
+                <justify><i>Nery González</i> Es una estudiante de doctorado de Venezuela. Realizó sus estudios de licenciatura en Sociología en la Universidad Central de Venezuela. Actualmente investiga Literatura diaspórica y narrativas transnacionales desde el Caribe.
             </p>
 
         </div>
