--- a/src/content/pages/Bios/julie.html
+++ b/src/content/pages/Bios/julie.html
@@ -30,8 +30,8 @@
         </div>
         <div class="bio-es">
             <p>
-                <justify><i>Julieta Y. Goldsmidt</i> is a Clinical psychologist and psychoanalyst. Ph.D student in psychology (UBA). Researcher specializing in topology and its uses in the field of mental health. Presenter at multiple research conferences (UBA,
-                    AASM, AAHD) as well as co-author of books and publications in academic journals.
+                <justify><i>Julieta Y. Goldsmidt</i> Es psicóloga clínica y psicoanalista. Estudiante de Doctorado en Psicología (UBA). Investigadora especializada en topología y sus usos en el campo de la salud mental. Ha participado en múltiples congresos de investigación (UBA,
+                    AASM, AAHD) así como coautora de libros y publicaciones en revistas académicas.
             </p>
 
         </div>
