--- a/src/content/pages/Bios/Carlos.html
+++ b/src/content/pages/Bios/Carlos.html
@@ -26,7 +26,7 @@
         </div>
         <div class="bio-en">
             <p>
-                <justify><i>Carlos J. Nusch</i> He is a Professor and Bachelor of Letters from the <b>National University of La Plata</b> and a Master's in Digital Humanities from the <b>Universidad Nacional de Educación a Distancia</b>. He has published several articles
+                <justify><i>Carlos J. Nusch</i> He is a Professor and Bachelor of Letters from the <b>National University of La Plata</b> and a Master's in Digital Humanities from the <b>National University of Distance Education</b>. He has published several articles
                     collaborative academic work, digital repositories, digitization of cultural heritage, analysis of political discourse and classical, medieval and modern literature. He works at the <b>Service for the Dissemination of Intellectual Creation (SEDICI)</b> of the UNLP, at the Library Link Project (PREBI) and at the CIC-Digital repository (CICPBA).</justify>
             
             </p>
