--- a/src/content/pages/Bios/Nery.html
+++ b/src/content/pages/Bios/Nery.html
@@ -29,13 +29,13 @@
         </div>
         <div class="bio-en">
             <p>
-                <justify><i>Nery González</i> is a Ph.D. student from Venezuela. She completed her bachelor's studies in Sociology at the Central University of Venezuela. She is currently investigating Diasporic Literature and transnational narratives from the
+                <justify><i>Nery González</i> is a Ph.D. student from Venezuela. She completed her bachelor's studies in Sociology at the <b>Central University of Venezuela</b>. She is currently investigating Diasporic Literature and transnational narratives from the
                     Caribbean.
             </p>
         </div>
         <div class="bio-es">
             <p>
-                <justify><i>Nery González</i> Es una estudiante de doctorado de Venezuela. Realizó sus estudios de licenciatura en Sociología en la Universidad Central de Venezuela. Actualmente investiga Literatura diaspórica y narrativas transnacionales desde el Caribe.
+                <justify><i>Nery González</i> Es una estudiante de doctorado de Venezuela. Realizó sus estudios de licenciatura en Sociología en la <b>Universidad Central de Venezuela</b>. Actualmente investiga Literatura diaspórica y narrativas transnacionales desde el Caribe.
             </p>
 
         </div>
