--- a/src/content/pages/Bios/alice.html
+++ b/src/content/pages/Bios/alice.html
@@ -29,13 +29,13 @@
         </div>
         <div class="bio-en">
             <p>
-                <justify><i>Alice Bi</i> is an undergraduate student at the University of Maryland, College Park double-majoring in English and International Relations. She's lived in Taipei, Beijing, Singapore, and now College Park - where she's a member of the
+                <justify><i>Alice Bi</i> is an undergraduate student at the <b>University of Maryland</b>, College Park double-majoring in English and International Relations. She's lived in Taipei, Beijing, Singapore, and now College Park - where she's a member of the
                     Jiménez-Porter Writers' House. She's interested in the digital and the liminal.
             </p>
         </div>
         <div class="bio-es">
             <p>
-                <justify><i>Alice Bi</i> Es estudiante de pregrado en la Universidad de Maryland, College Park. Cuenta con una doble especialización en inglés y relaciones internacionales. Ha vivido en Taipei, Beijing, Singapur y ahora en College Park, donde es miembro de la
+                <justify><i>Alice Bi</i> Es estudiante de pregrado en la <b>Universidad de Maryland</b>, College Park. Cuenta con una doble especialización en inglés y relaciones internacionales. Ha vivido en Taipei, Beijing, Singapur y ahora en College Park, donde es miembro de la
                     Casa de Escritores Jiménez-Porter. Le interesa lo digital y lo liminal.
             </p>
 
