--- a/src/content/pages/about.html
+++ b/src/content/pages/about.html
@@ -11,6 +11,10 @@
         a focus on minimal computing, and design thinking. In addition to studying content and forms related to digital culture, our purpose is to learn computational tools like HTML, CSS, and TEI coding languages to enhance textual analysis of the Colonial
         period.
     </p>
+    <p align="justify"> <b>>Los Code Copycats</b> es un grupo que integra estudiantes de la Universidad de Maryland y la Universidad del Salvador. Es un grupo multicultural y multilingüe que busca desarrollar un trabajo colaborativo para construir un sitio estático bilingüe del texto <em>Relato de un viaje por el Río de la Plata (edición TEI)</em> Este proyecto se encuentra actualmente en proceso y va de la mano con el curso <em>Edición digital con computación mínima: las humanidades a un escala global</em>, con
+        un enfoque en la computación mínima. Además de estudiar contenidos y formas relacionados con la cultura digital, nuestro propósito es aprender herramientas computacionales como HTML, CSS y lenguaje de codificación TEI para mejorar el análisis textual del período colonial.
+        
+    </p>
 </div>
 <footer>
     <p>
