--- a/src/content/pages/Copycats Charter.html
+++ b/src/content/pages/Copycats Charter.html
@@ -13,9 +13,9 @@
         <h3><i>Last updated / Última actualización: 2022-09-21</i></h3>
     </div> 
 </div>
-<div id="column1" style="display: flex">
-    <div class="content">
-   
+<div id="column1">
+    <div class="abouten">
+    
 <p style="flex: 1 1 50%">
 <h2>Team Members </h2>
 <ul>
@@ -77,8 +77,8 @@ Always message the group - through Slack or Whatsapp - before pushing, so everyo
     </div>
 </div>
 
-<div id="column2" style="display: flex">
-    <div class="content">
+<div id="column2">
+    <div class="aboutes">
     <h2>Miembros del equipo</h2>
     <p style="flex: 1 1 50%">
     <ul>
