--- a/src/content/pages/Bios/alice.html
+++ b/src/content/pages/Bios/alice.html
@@ -17,9 +17,9 @@
             <img src="alice2.jpg" alt="Alice" class="photo-rounded-circle">
             <br>
             <div class="barra-redes">
-                <a href="https://www.linkedin.com/in/ligia-neryanna-gonz%C3%A1lez-4b1871b2/" target="_blank"><img src="linkedin.png" alt="$linkedinid" width="20" height="20"></a>
-                <a href="https://www.facebook.com/ligia.neryanna/ " target="_blank"><img src="facebook.jpg" alt="facebook" width="20" height="20"></a>
-                <a href="https://twitter.com/Neryanna4" target="_blank"><img src="twitter.png" alt="twitter" width="20" height="20"></a>
+                <a href="https://www.linkedin.com/in/alice-bi-157643174/" target="_blank"><img src="linkedin.png" alt="$linkedinid" width="20" height="20"></a>
+                <a href="https://www.facebook.com/alice.bwh" target="_blank"><img src="facebook.jpg" alt="facebook" width="20" height="20"></a>
+                <a href="https://twitter.com/Ali_B1_" target="_blank"><img src="twitter.png" alt="twitter" width="20" height="20"></a>
                 <br>
                 <br>
                 <a href="mailto:alicebi@terpmail.umd.edu">
