--- a/src/content/pages/Copycats Charter.html
+++ b/src/content/pages/Copycats Charter.html
@@ -4,6 +4,8 @@
     <a href="https://41ibi.github.io/code_copycats/Copycats%20Charter"><button  class="button-61" role="button">CHARTER</button></a>
     <a href="https://41ibi.github.io/code_copycats/edition"><button  class="button-61" role="button">EDITION</button></a>
 </nav>
+
+
 <div class="charter">
     <div class="charter-title">
 
@@ -13,8 +15,10 @@
         <h3><i>Last updated / Última actualización: 2022-09-21</i></h3>
     </div> 
 </div>
+<div class="grid">
     <div class="abouten">
-    
+        <div class="row">
+        <div class="column">
 <p>
 <h2>Team Members </h2>
 <ul>
@@ -73,8 +77,11 @@ Always message the group - through Slack or Whatsapp - before pushing, so everyo
     <li>Learn from experience.</li>
     <li>Humor’s welcome!</li>
 </ul>
+</div>  
+</div>
 </div>
 
+<div class="column">
     <div class="aboutes">
     <h2>Miembros del equipo</h2>
     <p>
@@ -119,6 +126,8 @@ Compartiremos archivos a través de correo electrónico, Slack y mensajes urgent
     <li>¡El humor es bienvenido!</li></ul>
 </ul>
 </p>
+</div>
+</div>
 </div>
 
     
