--- a/src/content/pages/Copycats Charter.html
+++ b/src/content/pages/Copycats Charter.html
@@ -129,7 +129,7 @@ Compartiremos archivos a través de correo electrónico, Slack y mensajes urgent
 
     
 
-<footer>
+<footer class ="body footer">
     <p>
         A project by the Code Copycats | 2022
     </p>
