--- a/src/content/pages/Copycats Charter.html
+++ b/src/content/pages/Copycats Charter.html
@@ -129,8 +129,8 @@ Compartiremos archivos a través de correo electrónico, Slack y mensajes urgent
 
     
 
-<footer class ="body footer">
-    <p>
+<footer>
+    <p class ="body footer">
         A project by the Code Copycats | 2022
     </p>
 </footer>
