try to deploy correctly

--- a/src/content/pages/edition.html
+++ b/src/content/pages/edition.html
@@ -11,6 +11,9 @@
             <h4>Our Edition | Nuestra Edición</h4>
             <a href="https://41ibi.github.io/code_copycats/ENGLISH%20VERSION"> ENGLISH VERSION</a>
             <a href="https://41ibi.github.io/code_copycats/SPANISH%20VERSION">VERSIÓN EN ESPAÑOL</a>
+
+            <h4>References | Referencias</h4>
+
         </div>
         <div class="edition-en">
             <p>This bilingual edition of the text Relato de un viaje por el Río de la Plata was carried out entirely following the principles of Minimal Computing, aimed at optimizing the available resources so that the text can be reached by the largest
