--- a/src/content/pages/edition.html
+++ b/src/content/pages/edition.html
@@ -20,7 +20,7 @@
         </div>
         <div class="edition-es">
             <h4>Nuestra Edición</h4>
-            <a href="https://41ibi.github.io/code_copycats/SPANISH%20VERSION">Read</a>
+            <a href="https://41ibi.github.io/code_copycats/SPANISH%20VERSION">Leer</a>
             <p>La presente edición bilingüe del texto Relato de un viaje por el Río de la Plata fue realizada enteramente siguiendo los principios de la Computación Mínima, orientada a optimizar los recursos disponibles para que el texto pueda ser alcanzado
                 por la mayor cantidad de lectores posibles sin importar sus dificultades de acceso a internet, dispositivos de lectura, infraestructura, etc. Se ha utilizado el marcado XML TEI como medio para una correcta codificación de las diferentes
                 características del texto y entregar así una versión revisada y cuidada en diversos aspectos: se priorizó el contenido geográfico y el contexto histórico como reflejo del “choque” cultural y social implícito en el relato. La edición XML
