--- a/src/content/pages/2-Our team.html
+++ b/src/content/pages/2-Our team.html
@@ -49,8 +49,8 @@
         </div>
     </div>
 </div>
-<footer>
+<!--<footer>
     <p>
         A project by the Code Copycats | 2022
     </p>
-</footer>
+</footer>-->
