--- a/src/content/pages/2-Our team.html
+++ b/src/content/pages/2-Our team.html
@@ -1,50 +1,50 @@
 <nav style="text-align: right" ;>
     <a href="https://41ibi.github.io/code_copycats/"><button  class="button-61" role="button">HOME</button></a>
-    <a href="https://41ibi.github.io/code_copycats/team"><button  class="button-61" role="button">TEAM</button></a>
-    <a href="https://41ibi.github.io/code_copycats/Copycats%20Charter"><button  class="button-61" role="button">CHARTER</button></a>
-    <a href="https://41ibi.github.io/code_copycats/edition"><button  class="button-61" role="button">EDITION</button></a>
+    <a href="https://41ibi.github.io/code_copycats/2-Our%20team><button  class=" button-61 " role="button ">TEAM</button></a>
+    <a href="https://41ibi.github.io/code_copycats/3-Charter "><button class="button-61 " role="button ">CHARTER</button></a>
+    <a href="https://41ibi.github.io/code_copycats/4-Edition "><button  class="button-61 " role="button ">EDITION</button></a>
 </nav>
 <div>
-    <h1 style="text-align:center">Our Team</h1>
-    <div class="card-container">
-        <div class="unit-card">
-            <div class="title-card">
-                <img src="alice2.jpg" alt="Alice Bi" style="width:100%">
+    <h1 style="text-align:center ">Our Team</h1>
+    <div class="card-container ">
+        <div class="unit-card ">
+            <div class="title-card ">
+                <img src="alice2.jpg " alt="Alice Bi " style="width:100% ">
                 <p>Alice Bi</p>
             </div>
             <div>
-                <p class="card">International Relations</p>
-                <p><a href="https://41ibi.github.io/code_copycats/alice"><button class="button-card">More info</button></a></p>
+                <p class="card ">International Relations</p>
+                <p><a href="https://41ibi.github.io/code_copycats/alice "><button class="button-card ">More info</button></a></p>
             </div>
         </div>
-        <div class="unit-card">
-            <div class="title-card">
-                <img src="Carlos2.jpeg" alt="Carlos" style="width:100%">
+        <div class="unit-card ">
+            <div class="title-card ">
+                <img src="Carlos2.jpeg " alt="Carlos " style="width:100% ">
                 <p>Carlos Nusch</p>
             </div>
             <div>
-                <p class="card">Literature Professor</p>
-                <p><a href="https://41ibi.github.io/code_copycats/Carlos"><button class="button-card">More info</button></a></p>
+                <p class="card ">Literature Professor</p>
+                <p><a href="https://41ibi.github.io/code_copycats/Carlos "><button class="button-card ">More info</button></a></p>
             </div>
         </div>
-        <div class="unit-card">
-            <div class="title-card">
-                <img src="julie-profile2.jpeg" alt="Julieta Goldsmidt" style="width:100%">
+        <div class="unit-card ">
+            <div class="title-card ">
+                <img src="julie-profile2.jpeg " alt="Julieta Goldsmidt " style="width:100% ">
                 <p>Julieta Goldsmidt</p>
             </div>
             <div>
-                <p class="card">Clinical Psychologist</p>
-                <p><a href="https://41ibi.github.io/code_copycats/julie"><button class="button-card">More info</button></a></p>
+                <p class="card ">Clinical Psychologist</p>
+                <p><a href="https://41ibi.github.io/code_copycats/julie "><button class="button-card ">More info</button></a></p>
             </div>
         </div>
-        <div class="unit-card">
-            <div class="title-card">
-                <img src="Neryprofile_pic.jpeg" alt="Nery González" style="width:100%">
+        <div class="unit-card ">
+            <div class="title-card ">
+                <img src="Neryprofile_pic.jpeg " alt="Nery González " style="width:100% ">
                 <p>Nery González</p>
             </div>
             <div>
-                <p class="card">Sociologist</p>
-                <p><a href="https://41ibi.github.io/code_copycats/Nery"><button class="button-card">More info</button></a></p>
+                <p class="card ">Sociologist</p>
+                <p><a href="https://41ibi.github.io/code_copycats/Nery "><button class="button-card ">More info</button></a></p>
             </div>
         </div>
     </div>
