--- a/src/content/pages/3-Charter.html
+++ b/src/content/pages/3-Charter.html
@@ -1,22 +1,22 @@
 <nav style="text-align: right" ;>
     <a href="https://41ibi.github.io/code_copycats/"><button  class="button-61" role="button">HOME</button></a>
-    <a href="https://41ibi.github.io/code_copycats/team"><button  class="button-61" role="button">TEAM</button></a>
-    <a href="https://41ibi.github.io/code_copycats/Copycats%20Charter"><button  class="button-61" role="button">CHARTER</button></a>
-    <a href="https://41ibi.github.io/code_copycats/edition"><button  class="button-61" role="button">EDITION</button></a>
+    <a href="https://41ibi.github.io/code_copycats/2-Our%20team><button  class=" button-61 " role="button ">TEAM</button></a>
+    <a href="https://41ibi.github.io/code_copycats/3-Charter "><button  class="button-61 " role="button ">CHARTER</button></a>
+    <a href="https://41ibi.github.io/code_copycats/4-Edition "><button  class="button-61 " role="button ">EDITION</button></a>
 </nav>
 
 
-<div class="charter">
-    <div class="charter-title">
+<div class="charter ">
+    <div class="charter-title ">
 
         <h3>Team charter / Contrato de equipo</h3>
-        <img src="Cat_Logo_test2.jpg" alt="Charter_Logo." width="auto" , height="400px">
+        <img src="Cat_Logo_test2.jpg " alt="Charter_Logo. " width="auto " , height="400px ">
         <h3>Group name / Nombre del Equipo: The Code Copycats</h3>
         <h3><i>Last updated / Última actualización: 2022-09-21</i></h3>
     </div>
 </div>
 
-<div class="abouten">
+<div class="abouten ">
     <p>
         <h2>Team Members </h2>
         <ul>
@@ -52,16 +52,16 @@
 
     <h2>Team management</h2>
     Mostly communicate files through email, Slack, and urgent messages through Whatsapp.
-    <a href="mailto:alicebi@terpmail.umd.edu" target="_blank"><img src="mail.svg" alt="Mail" width="25" scale="0">alicebi@terpmail.umd.edu</a>
+    <a href="mailto:alicebi@terpmail.umd.edu " target="_blank "><img src="mail.svg " alt="Mail " width="25 " scale="0 ">alicebi@terpmail.umd.edu</a>
     </br>
-    <a href="mailto:julieta.gold@gmail.com" target="_blank"><img src="mail.svg" alt="Mail" width="25" scale="0">julieta.gold@gmail.com </a>
+    <a href="mailto:julieta.gold@gmail.com " target="_blank "><img src="mail.svg " alt="Mail " width="25 " scale="0 ">julieta.gold@gmail.com </a>
     </br>
-    <a href="mailto:carlosnusch@prebi.unlp.edu.ar" target="_blank"><img src="mail.svg" alt="Mail" width="25" scale="0">carlosnusch@prebi.unlp.edu.ar</a>
+    <a href="mailto:carlosnusch@prebi.unlp.edu.ar " target="_blank "><img src="mail.svg " alt="Mail " width="25 " scale="0 ">carlosnusch@prebi.unlp.edu.ar</a>
     </br>
-    <a href="mailto:Lngm@umd.edu" target="_blank"><img src="mail.svg" alt="Mail" width="25" scale="0">Lngm@umd.edu</a>
+    <a href="mailto:Lngm@umd.edu " target="_blank "><img src="mail.svg " alt="Mail " width="25 " scale="0 ">Lngm@umd.edu</a>
     </br>
     Always message the group - through Slack or Whatsapp - before pushing, so everyone knows what changes are made.</br>
-    Maintain code through GitHub, via the Copycat repository. <a href="https://github.com/41ibi/code_copycats/ " target="_blank" class="no-lightbox">https://github.com/41ibi/code_copycats/</a></br>
+    Maintain code through GitHub, via the Copycat repository. <a href="https://github.com/41ibi/code_copycats/ " target="_blank " class="no-lightbox ">https://github.com/41ibi/code_copycats/</a></br>
     As we learn the details of the project and learn the strengths of each member, we will distribute the specific roles.
     <ul>
         <li>We will meet once a week to organize pending tasks. We will take into account that each one can work different hours as long as they communicate efficiently. </li>
@@ -79,7 +79,7 @@
 </div>
 </div>
 
-<div class="aboutes">
+<div class="aboutes ">
     <h2>Miembros del equipo</h2>
     <p>
         <ul>
@@ -110,7 +110,7 @@
         Ser conscientes de las formas en que nuestros modelos de pensamiento se quedan cortos para ayudarnos a identificar las facetas moralmente opacas del trabajo digital.
         <h2>Team management</h2>
         Compartiremos archivos a través de correo electrónico, Slack y mensajes urgentes a través de Whatsapp.</br>
-        El código se mantendrá por medio en GitHub, via el reositorio Copycat. <a href="https://github.com/41ibi/code_copycats/ " target="_blank" class="no-lightbox">https://github.com/41ibi/code_copycats/</a></br>
+        El código se mantendrá por medio en GitHub, via el reositorio Copycat. <a href="https://github.com/41ibi/code_copycats/ " target="_blank " class="no-lightbox ">https://github.com/41ibi/code_copycats/</a></br>
         Habiendo obtenido los detalles del proyecto y conociendo las fortalezas de cada integrante, realizaremos la distribución de roles de manera específica.
         <ul>
             <li>Nos encontraremos una vez a la semana para organizar las tareas pendientes. Tomaremos en cuenta los horarios de cada integrante para comunicarnos de manera eficiente.</li>
@@ -134,7 +134,7 @@
 
 
 <!--<footer>
-    <p class ="body footer">
+    <p class ="body footer ">
         A project by the Code Copycats | 2022
     </p>
 </footer>-->
