--- a/src/content/pages/4-Edition.html
+++ b/src/content/pages/4-Edition.html
@@ -1,35 +1,34 @@
 <nav style="text-align: right" ;>
     <a href="https://41ibi.github.io/code_copycats/"><button  class="button-61" role="button">HOME</button></a>
-    <a href="https://41ibi.github.io/code_copycats/team"><button  class="button-61" role="button">TEAM</button></a>
-    <a href="https://41ibi.github.io/code_copycats/Copycats%20Charter"><button  class="button-61" role="button">CHARTER</button></a>
-    <a href="https://41ibi.github.io/code_copycats/edition"><button  class="button-61" role="button">EDITION</button></a>
+    <a href="https://41ibi.github.io/code_copycats/2-Our%20team><button  class=" button-61 " role="button ">TEAM</button></a>
+    <a href="https://41ibi.github.io/code_copycats/3-Charter "><button class="button-61 " role="button ">CHARTER</button></a>
+    <a href="https://41ibi.github.io/code_copycats/4-Edition "><button  class="button-61 " role="button ">EDITION</button></a>
 </nav>
 
 <div>
-    <div class="edition">
-        <div class="edition-en">
-            <h4>Our Edition </h4> <a href="https://41ibi.github.io/code_copycats/ENGLISH%20VERSION"> Read</a>
+    <div class="edition ">
+        <div class="edition-en ">
+            <h4>Our Edition </h4> <a href="https://41ibi.github.io/code_copycats/ENGLISH%20VERSION "> Read</a>
             <p>This bilingual edition of the text Relato de un viaje por el Río de la Plata was carried out entirely following the principles of Minimal Computing, aimed at optimizing the available resources so that the text can be reached by the largest
                 possible number of readers regardless of their backgrounds, difficulties with internet access, reading devices, infrastructure, etc. The XML TEI markup has been used as a means for a correct codification of the different characteristics
-                of the text and thus deliver a version revised and cared for in various aspects: the geographical content and the historical context were prioritized as a reflection of the implicit cultural and social "shock". in the story. The XML edition
+                of the text and thus deliver a version revised and cared for in various aspects: the geographical content and the historical context were prioritized as a reflection of the implicit cultural and social "shock ". in the story. The XML edition
                 that we have prepared, guided by the TEI standard, also gives an account of the principles that we assume to carry out the encoding. The Spanish and English versions of the text were encoded to be understandable by modern readers, so the
                 spelling was updated to reflect contemporary use of the language. In turn, the spelling with which it was composed was preserved in order to give the reader the option of consulting the text in its original version. The <code><choice></code>,
                 <code><orig></code>, and <code><reg></code> tags were used throughout the text. In addition, according to the characteristics of the text, in which the geographical location is highlighted, we use the <code><name></code> element with the
-                values <code>"place"</code> and <code>"placeGeog"</code> for the <code>@type=</code> attribute as well as the <code>@type</code> attribute with the value <code>"ethnicities"</code> in the element <code><rs></code> for named peoples and
-                ethnicities. In an attempt to deepen the analysis of the topographic content, the element use the <code><measure></code> element was also used with the values <code>"distance"</code>, <code>"cardinal"</code> and <code>"ordinal"</code>                in the <code>@type</code> attribute to indicate distances and amounts.</p>
+                values <code>"place "</code> and <code>"placeGeog "</code> for the <code>@type=</code> attribute as well as the <code>@type</code> attribute with the value <code>"ethnicities "</code> in the element <code><rs></code> for named peoples
+                and ethnicities. In an attempt to deepen the analysis of the topographic content, the element use the <code><measure></code> element was also used with the values <code>"distance "</code>, <code>"cardinal "</code> and <code>"ordinal "</code>                in the <code>@type</code> attribute to indicate distances and amounts.</p>
         </div>
-        <div class="edition-es">
+        <div class="edition-es ">
             <h4>Nuestra Edición</h4>
-            <a href="https://41ibi.github.io/code_copycats/SPANISH%20VERSION">Leer</a>
+            <a href="https://41ibi.github.io/code_copycats/SPANISH%20VERSION ">Leer</a>
             <p>La presente edición bilingüe del texto Relato de un viaje por el Río de la Plata fue realizada enteramente siguiendo los principios de la Computación Mínima, orientada a optimizar los recursos disponibles para que el texto pueda ser alcanzado
                 por la mayor cantidad de lectores posibles sin importar sus dificultades de acceso a internet, dispositivos de lectura, infraestructura, etc. Se ha utilizado el marcado XML TEI como medio para una correcta codificación de las diferentes
                 características del texto y entregar así una versión revisada y cuidada en diversos aspectos: se priorizó el contenido geográfico y el contexto histórico como reflejo del “choque” cultural y social implícito en el relato. La edición XML
                 que hemos preparado, guiados por el estándar TEI, también da cuenta de los principios que asumimos para realizar la codificación. Las versiones en español e inglés del texto fueron codificadas para que fueran comprensibles por los lectores
                 modernos, por lo que se procedió a actualizar la ortografía al uso contemporáneo del idioma. A su vez, se preservó la ortografía con la que fuera compuesto con la finalidad de darle al lector la opción de consultar el texto en su versión
                 original. Se utilizaron las etiquetas <code><choice></code>, <code><orig></code> y <code><reg></code> en todo el texto. Además, de acuerdo a las características del texto, en el que se destaca la ubicación geográfica, utilizamos el nombre
-                del elemento <code><name></code> con los valores <code>"place"</code> y <code>"placeGeog"</code> para el atributo <code>@type=</code> así como el atributo <code>@type</code> con el valor <code>"etnias"</code> <code><rs></code> para pueblos
-                y etnias nombrados. En un intento por profundizar el análisis del contenido topográfico también se utilizó el elemento <code><measure></code> con los valores <code>"distance"</code>, <code>"cardinal"</code> y <code>"ordinal"</code> en
-                el atributo <code>@type</code> para indicar distancias y cantidades.</p>
+                del elemento <code><name></code> con los valores <code>"place "</code> y <code>"placeGeog "</code> para el atributo <code>@type=</code> así como el atributo <code>@type</code> con el valor <code>"etnias "</code> <code><rs></code> para
+                pueblos y etnias nombrados. En un intento por profundizar el análisis del contenido topográfico también se utilizó el elemento <code><measure></code> con los valores <code>"distance "</code>, <code>"cardinal "</code> y <code>"ordinal "</code>                en el atributo <code>@type</code> para indicar distancias y cantidades.</p>
         </div>
     </div>
 </div>
