--- a/src/content/pages/Bios/alice.html
+++ b/src/content/pages/Bios/alice.html
@@ -4,39 +4,39 @@
 </head>
 <nav style="text-align: right" ;>
     <a href="https://41ibi.github.io/code_copycats/"><button  class="button-61" role="button">HOME</button></a>
-    <a href="https://41ibi.github.io/code_copycats/team"><button  class="button-61" role="button">TEAM</button></a>
-    <a href="https://41ibi.github.io/code_copycats/Copycats%20Charter"><button  class="button-61" role="button">CHARTER</button></a>
-    <a href="https://41ibi.github.io/code_copycats/edition"><button  class="button-61" role="button">EDITION</button></a>
+    <a href="https://41ibi.github.io/code_copycats/2-Our%20team><button  class=" button-61 " role="button ">TEAM</button></a>
+    <a href="https://41ibi.github.io/code_copycats/3-Charter "><button class="button-61 " role="button ">CHARTER</button></a>
+    <a href="https://41ibi.github.io/code_copycats/4-Edition "><button  class="button-61 " role="button ">EDITION</button></a>
 </nav>
 
 <div>
-    <div class="bio">
-        <div class="bio-header">
+    <div class="bio ">
+        <div class="bio-header ">
             <h4>A. Bi
             </h4>
-            <img src="alice2.jpg" alt="Alice" class="photo-rounded-circle">
+            <img src="alice2.jpg " alt="Alice " class="photo-rounded-circle ">
             <br>
-            <div class="barra-redes">
-                <a href="https://www.linkedin.com/in/alice-bi-157643174/" target="_blank"><img src="linkedin.png" alt="$linkedinid" width="20" height="20"></a>
-                <a href="https://www.facebook.com/alice.bwh" target="_blank"><img src="facebook.jpg" alt="facebook" width="20" height="20"></a>
-                <a href="https://twitter.com/Ali_B1_" target="_blank"><img src="twitter.png" alt="twitter" width="20" height="20"></a>
+            <div class="barra-redes ">
+                <a href="https://www.linkedin.com/in/alice-bi-157643174/ " target="_blank "><img src="linkedin.png " alt="$linkedinid " width="20 " height="20 "></a>
+                <a href="https://www.facebook.com/alice.bwh " target="_blank "><img src="facebook.jpg " alt="facebook " width="20 " height="20 "></a>
+                <a href="https://twitter.com/Ali_B1_ " target="_blank "><img src="twitter.png " alt="twitter " width="20 " height="20 "></a>
                 <br>
                 <br>
-                <a href="mailto:alicebi@terpmail.umd.edu">
-                    <button class="button-61" role="button">CONTACT</button></a>
+                <a href="mailto:alicebi@terpmail.umd.edu ">
+                    <button class="button-61 " role="button ">CONTACT</button></a>
 
             </div>
         </div>
-        <div class="bio-en">
+        <div class="bio-en ">
             <p>
-                <justify><i>Alice Bi</i> is an undergraduate student at the <b>University of Maryland</b>, College Park double-majoring in English and International Relations. She's lived in Taipei, Beijing, Singapore, and now College Park - where she's a member of the
-                    Jiménez-Porter Writers' House. She's interested in the digital and the liminal.
+                <justify><i>Alice Bi</i> is an undergraduate student at the <b>University of Maryland</b>, College Park double-majoring in English and International Relations. She's lived in Taipei, Beijing, Singapore, and now College Park - where she's a member
+                    of the Jiménez-Porter Writers' House. She's interested in the digital and the liminal.
             </p>
         </div>
-        <div class="bio-es">
+        <div class="bio-es ">
             <p>
-                <justify><i>Alice Bi</i> Es estudiante de pregrado en la <b>Universidad de Maryland</b>, College Park. Cuenta con una doble especialización en inglés y relaciones internacionales. Ha vivido en Taipei, Beijing, Singapur y ahora en College Park, donde es miembro de la
-                    Casa de Escritores Jiménez-Porter. Le interesa lo digital y lo liminal.
+                <justify><i>Alice Bi</i> Es estudiante de pregrado en la <b>Universidad de Maryland</b>, College Park. Cuenta con una doble especialización en inglés y relaciones internacionales. Ha vivido en Taipei, Beijing, Singapur y ahora en College Park,
+                    donde es miembro de la Casa de Escritores Jiménez-Porter. Le interesa lo digital y lo liminal.
             </p>
 
         </div>
