--- a/src/content/pages/Bios/Nery.html
+++ b/src/content/pages/Bios/Nery.html
@@ -1,41 +1,42 @@
 <nav style="text-align: right" ;>
     <a href="https://41ibi.github.io/code_copycats/"><button  class="button-61" role="button">HOME</button></a>
-    <a href="https://41ibi.github.io/code_copycats/team"><button  class="button-61" role="button">TEAM</button></a>
-    <a href="https://41ibi.github.io/code_copycats/Copycats%20Charter"><button  class="button-61" role="button">CHARTER</button></a>
-    <a href="https://41ibi.github.io/code_copycats/edition"><button  class="button-61" role="button">EDITION</button></a>
+    <a href="https://41ibi.github.io/code_copycats/2-Our%20team><button  class=" button-61 " role="button ">TEAM</button></a>
+    <a href="https://41ibi.github.io/code_copycats/3-Charter "><button class="button-61 " role="button ">CHARTER</button></a>
+    <a href="https://41ibi.github.io/code_copycats/4-Edition "><button  class="button-61 " role="button ">EDITION</button></a>
 </nav>
 
 <p align="justify "> </p>
 
 
 <div>
-    <div class="bio">
-        <div class="bio-header">
+    <div class="bio ">
+        <div class="bio-header ">
             <h4>N. González
             </h4>
-            <img src="Neryprofile_pic.jpeg" alt="Nery" class="photo-rounded-circle">
+            <img src="Neryprofile_pic.jpeg " alt="Nery " class="photo-rounded-circle ">
             <br>
-            <div class="barra-redes">
-                <a href="https://www.linkedin.com/in/ligia-neryanna-gonz%C3%A1lez-4b1871b2/" target="_blank"><img src="linkedin.png" alt="$linkedinid" width="20" height="20"></a>
-                <a href="https://www.facebook.com/ligia.neryanna/ " target="_blank"><img src="facebook.jpg" alt="facebook" width="20" height="20"></a>
-                <a href="https://twitter.com/Neryanna4" target="_blank"><img src="twitter.png" alt="twitter" width="20" height="20"></a>
+            <div class="barra-redes ">
+                <a href="https://www.linkedin.com/in/ligia-neryanna-gonz%C3%A1lez-4b1871b2/ " target="_blank "><img src="linkedin.png " alt="$linkedinid " width="20 " height="20 "></a>
+                <a href="https://www.facebook.com/ligia.neryanna/ " target="_blank "><img src="facebook.jpg " alt="facebook " width="20 " height="20 "></a>
+                <a href="https://twitter.com/Neryanna4 " target="_blank "><img src="twitter.png " alt="twitter " width="20 " height="20 "></a>
                 <br>
                 <br>
-                <a href="mailto:lngm@umd.edu">
-                    <button class="button-61" role="button">CONTACT</button></a>
+                <a href="mailto:lngm@umd.edu ">
+                    <button class="button-61 " role="button ">CONTACT</button></a>
 
 
             </div>
         </div>
-        <div class="bio-en">
+        <div class="bio-en ">
             <p>
-                <justify><i>Nery González</i> is a Ph.D. student from Venezuela. She completed her bachelor's studies in Sociology at the <b>Central University of Venezuela</b>. She is currently investigating Diasporic Literature and transnational narratives from the
-                    Caribbean.
+                <justify><i>Nery González</i> is a Ph.D. student from Venezuela. She completed her bachelor's studies in Sociology at the <b>Central University of Venezuela</b>. She is currently investigating Diasporic Literature and transnational narratives from
+                    the Caribbean.
             </p>
         </div>
-        <div class="bio-es">
+        <div class="bio-es ">
             <p>
-                <justify><i>Nery González</i> Es una estudiante de doctorado de Venezuela. Realizó sus estudios de licenciatura en Sociología en la <b>Universidad Central de Venezuela</b>. Actualmente investiga Literatura diaspórica y narrativas transnacionales desde el Caribe.
+                <justify><i>Nery González</i> Es una estudiante de doctorado de Venezuela. Realizó sus estudios de licenciatura en Sociología en la <b>Universidad Central de Venezuela</b>. Actualmente investiga Literatura diaspórica y narrativas transnacionales
+                    desde el Caribe.
             </p>
 
         </div>
