--- a/src/content/pages/Bios/julie.html
+++ b/src/content/pages/Bios/julie.html
@@ -1,37 +1,37 @@
 <nav style="text-align: right" ;>
     <a href="https://41ibi.github.io/code_copycats/"><button  class="button-61" role="button">HOME</button></a>
-    <a href="https://41ibi.github.io/code_copycats/team"><button  class="button-61" role="button">TEAM</button></a>
-    <a href="https://41ibi.github.io/code_copycats/Copycats%20Charter"><button  class="button-61" role="button">CHARTER</button></a>
-    <a href="https://41ibi.github.io/code_copycats/edition"><button  class="button-61" role="button">EDITION</button></a>
+    <a href="https://41ibi.github.io/code_copycats/2-Our%20team><button  class=" button-61 " role="button ">TEAM</button></a>
+    <a href="https://41ibi.github.io/code_copycats/3-Charter "><button class="button-61 " role="button ">CHARTER</button></a>
+    <a href="https://41ibi.github.io/code_copycats/4-Edition "><button  class="button-61 " role="button ">EDITION</button></a>
 </nav>
 
 <div>
-    <div class="bio">
-        <div class="bio-header">
+    <div class="bio ">
+        <div class="bio-header ">
             <h4>J. Goldsmidt</h4>
-            <img src="julie-profile2.jpeg" alt="Julieta Goldsmidt" class="photo-rounded-circle">
+            <img src="julie-profile2.jpeg " alt="Julieta Goldsmidt " class="photo-rounded-circle ">
             <br>
-            <div class="barra-redes">
-                <a href="https://www.linkedin.com/in/julietagoldsmidt/" target="_blank"><img src="linkedin.png" alt="$linkedinid" width="20" height="20"></a>
-                <a href="https://www.facebook.com/profile.php?id=100011093161253" target="_blank"><img src="facebook.jpg" alt="facebook" width="20" height="20"></a>
-                <a href="https://twitter.com/juligoldsmidt" target="_blank"><img src="twitter.png" alt="twitter" width="20" height="20"></a>
+            <div class="barra-redes ">
+                <a href="https://www.linkedin.com/in/julietagoldsmidt/ " target="_blank "><img src="linkedin.png " alt="$linkedinid " width="20 " height="20 "></a>
+                <a href="https://www.facebook.com/profile.php?id=100011093161253 " target="_blank "><img src="facebook.jpg " alt="facebook " width="20 " height="20 "></a>
+                <a href="https://twitter.com/juligoldsmidt " target="_blank "><img src="twitter.png " alt="twitter " width="20 " height="20 "></a>
                 <br>
                 <br>
-                <a href="mailto:julieta.gold@gmail.com">
-                    <button class="button-61" role="button">CONTACT</button></a>
+                <a href="mailto:julieta.gold@gmail.com ">
+                    <button class="button-61 " role="button ">CONTACT</button></a>
 
             </div>
         </div>
-        <div class="bio-en">
+        <div class="bio-en ">
             <p>
                 <justify><i>Julieta Y. Goldsmidt</i> is a Clinical psychologist and psychoanalyst. Ph.D student in psychology (UBA). Researcher specializing in topology and its uses in the field of mental health. Presenter at multiple research conferences (UBA,
                     AASM, AAHD) as well as co-author of books and publications in academic journals.
             </p>
         </div>
-        <div class="bio-es">
+        <div class="bio-es ">
             <p>
-                <justify><i>Julieta Y. Goldsmidt</i> Es psicóloga clínica y psicoanalista. Estudiante de Doctorado en Psicología (UBA). Investigadora especializada en topología y sus usos en el campo de la salud mental. Ha participado en múltiples congresos de investigación (UBA,
-                    AASM, AAHD) así como coautora de libros y publicaciones en revistas académicas.
+                <justify><i>Julieta Y. Goldsmidt</i> Es psicóloga clínica y psicoanalista. Estudiante de Doctorado en Psicología (UBA). Investigadora especializada en topología y sus usos en el campo de la salud mental. Ha participado en múltiples congresos de
+                    investigación (UBA, AASM, AAHD) así como coautora de libros y publicaciones en revistas académicas.
             </p>
 
         </div>
