--- a/src/content/pages/4-Edition.html
+++ b/src/content/pages/4-Edition.html
@@ -1,6 +1,6 @@
 <nav style="text-align: right" ;>
     <a href="https://41ibi.github.io/code_copycats/"><button  class="button-61" role="button">HOME</button></a>
-    <a href="https://41ibi.github.io/code_copycats/2-Our%20team><button  class=" button-61 " role="button ">TEAM</button></a>
+    <a href="https://41ibi.github.io/code_copycats/2-Our%20team"><button  class=" button-61 " role="button ">TEAM</button></a>
     <a href="https://41ibi.github.io/code_copycats/3-Charter "><button class="button-61 " role="button ">CHARTER</button></a>
     <a href="https://41ibi.github.io/code_copycats/4-Edition "><button  class="button-61 " role="button ">EDITION</button></a>
 </nav>
