--- a/src/content/pages/home.html
+++ b/src/content/pages/home.html
@@ -6,7 +6,7 @@
     </div>
 
     <div class="home_nav t2">
-        <a href="https://41ibi.github.io/code_copycats/2-Our%20team><button class=" button-36 " role="button ">Meet the team</button></a>
+        <a href="https://41ibi.github.io/code_copycats/2-Our%20team"><button class=" button-36 " role="button ">Meet the team</button></a>
         <a href="https://41ibi.github.io/code_copycats/3-Charter "><button class="button-36 " role="button ">Our charter</button></a>
         <a href="https://41ibi.github.io/code_copycats/4-Edition "><button class="button-36 " role="button ">Learn about the edition</button></a>
     </div>
