--- a/src/content/pages/4-Edition.html
+++ b/src/content/pages/4-Edition.html
@@ -8,8 +8,11 @@
 <div>
     <div class="edition ">
         <div class="edition-en ">
-            <h3>Our Edition </h3>
-            <a href="https://41ibi.github.io/code_copycats/ENGLISH%20VERSION "> <button class="button-61" role="button">Read</button></a>
+            <div class="title-ed">
+                <h3>Our Edition </h3>
+                <a href="https://41ibi.github.io/code_copycats/ENGLISH%20VERSION "> <button class="button-61" role="button">Read</button></a>
+            </div>
+
             <p>This bilingual edition of the text Relato de un viaje por el Río de la Plata was carried out entirely following the principles of Minimal Computing, aimed at optimizing the available resources so that the text can be reached by the largest
                 possible number of readers regardless of their backgrounds, difficulties with internet access, reading devices, infrastructure, etc. The XML TEI markup has been used as a means for a correct codification of the different characteristics
                 of the text and thus deliver a version revised and cared for in various aspects: the geographical content and the historical context were prioritized as a reflection of the implicit cultural and social "shock ". in the story. The XML edition
@@ -20,8 +23,11 @@
                 and ethnicities. In an attempt to deepen the analysis of the topographic content, the element use the <code><measure></code> element was also used with the values <code>"distance "</code>, <code>"cardinal "</code> and <code>"ordinal "</code>                in the <code>@type</code> attribute to indicate distances and amounts.</p>
         </div>
         <div class="edition-es ">
-            <h3>Nuestra Edición</h3>
-            <a href="https://41ibi.github.io/code_copycats/SPANISH%20VERSION "><button  class="button-61" role="button">Leer</button></a>
+            <div class="tilte-ed">
+                <h3>Nuestra Edición</h3>
+                <a href="https://41ibi.github.io/code_copycats/SPANISH%20VERSION "><button  class="button-61" role="button">Leer</button></a>
+            </div>
+
             <p>La presente edición bilingüe del texto Relato de un viaje por el Río de la Plata fue realizada enteramente siguiendo los principios de la Computación Mínima, orientada a optimizar los recursos disponibles para que el texto pueda ser alcanzado
                 por la mayor cantidad de lectores posibles sin importar sus dificultades de acceso a internet, dispositivos de lectura, infraestructura, etc. Se ha utilizado el marcado XML TEI como medio para una correcta codificación de las diferentes
                 características del texto y entregar así una versión revisada y cuidada en diversos aspectos: se priorizó el contenido geográfico y el contexto histórico como reflejo del “choque” cultural y social implícito en el relato. La edición XML
