--- a/src/content/pages/3-Charter.html
+++ b/src/content/pages/3-Charter.html
@@ -16,7 +16,7 @@
     </div>
 </div>
 
-<div class="abouten ">
+<div class="charter-en ">
     <p>
         <h2>Team Members </h2>
         <ul>
@@ -79,7 +79,7 @@
 </div>
 </div>
 
-<div class="aboutes ">
+<div class="charter-es ">
     <h2>Miembros del equipo</h2>
     <p>
         <ul>
