--- a/src/content/pages/1-About us.html
+++ b/src/content/pages/1-About us.html
@@ -11,7 +11,7 @@
     </div>
     <div class="abouttext">
         <div class="abouten ">
-            <p align="justify "> <b>The Code Copycats</b> are a group that integrates students from the <b>University of Maryland</b> and the <b>Universidad del Salvador.</b>. We are a multicultural and multilingual group aiming to develop collaborative work to build a bilingual
+            <p> <b>The Code Copycats</b> are a group that integrates students from the <b>University of Maryland</b> and the <b>Universidad del Salvador.</b>. We are a multicultural and multilingual group aiming to develop collaborative work to build a bilingual
                 static site of the text <em>An Account of a Voyage up the River de la Plata (TEI edition)</em> This project is currently in progress and goes hand in hand with the course <em>Digital Publishing with Minimal computing: humanities at a global scale</em>,
                 with a focus on minimal computing, and design thinking. In addition to studying content and forms related to digital culture, our purpose is to learn computational tools like HTML, CSS, and TEI coding languages to enhance textual analysis
                 of the Colonial period. </justify>
