--- a/src/content/pages/4-Edition.html
+++ b/src/content/pages/4-Edition.html
@@ -23,7 +23,7 @@
                 and ethnicities. In an attempt to deepen the analysis of the topographic content, the element use the <code><measure></code> element was also used with the values <code>"distance "</code>, <code>"cardinal "</code> and <code>"ordinal "</code>                in the <code>@type</code> attribute to indicate distances and amounts.</p>
         </div>
         <div class="edition-es ">
-            <div class="tilte-ed">
+            <div class="title-ed">
                 <h3>Nuestra Edición</h3>
                 <a href="https://41ibi.github.io/code_copycats/SPANISH%20VERSION "><button  class="button-61" role="button">Leer</button></a>
             </div>
