--- a/src/content/pages/1-About us.html
+++ b/src/content/pages/1-About us.html
@@ -13,12 +13,12 @@
         <p> <b>The Code Copycats</b> are a group that integrates students from the <b>University of Maryland</b> and the <b>Universidad del Salvador.</b>. We are a multicultural and multilingual group aiming to develop collaborative work to build a bilingual
             static site of the text <em>An Account of a Voyage up the River de la Plata (TEI edition)</em> This project is currently in progress and goes hand in hand with the course <em>Digital Publishing with Minimal computing: humanities at a global scale</em>,
             with a focus on minimal computing, and design thinking. In addition to studying content and forms related to digital culture, our purpose is to learn computational tools like HTML, CSS, and TEI coding languages to enhance textual analysis
-            of the Colonial period. </justify>
+            of the Colonial period.
         </p>
         <p> <b>Los Code Copycats</b> es un grupo que integra estudiantes de la <b>Universidad de Maryland </b> y la <b>Universidad del Salvador</b>. Es un grupo multicultural y multilingüe que busca desarrollar un trabajo colaborativo para construir un sitio
             estático bilingüe del texto <em>Relato de un viaje por el Río de la Plata (edición TEI)</em> Este proyecto se encuentra actualmente en proceso y va de la mano con el curso <em>Edición digital con computación mínima: las humanidades a un escala global</em>,
             con un enfoque en la computación mínima. Además de estudiar contenidos y formas relacionados con la cultura digital, nuestro propósito es aprender herramientas computacionales como HTML, CSS y lenguaje de codificación TEI para mejorar el análisis
-            textual del período colonial. </justify>
+            textual del período colonial.
 
         </p>
     </div>
