--- a/src/content/pages/3-Charter.html
+++ b/src/content/pages/3-Charter.html
@@ -3,6 +3,7 @@
     <a href="https://41ibi.github.io/code_copycats/2-Our%20team"><button  class=" button-61 " role="button ">TEAM</button></a>
     <a href="https://41ibi.github.io/code_copycats/3-Charter "><button  class="button-61 " role="button ">CHARTER</button></a>
     <a href="https://41ibi.github.io/code_copycats/4-Edition "><button  class="button-61 " role="button ">EDITION</button></a>
+    <a href="https://41ibi.github.io/code_copycats/4-Vocabulary"><button  class="button-61 " role="button ">VOCABULARY</button></a>
 </nav>
 
 
