--- a/src/content/pages/6-Map.html
+++ b/src/content/pages/6-Map.html
@@ -1,1 +1,10 @@
-<iframe src="https://www.google.com/maps/d/embed?mid=15XX0dFN-9keHLwKZf3hsz8lVvuMsfDM&hl=en&ehbc=2E312F" width="640" height="480"></iframe>
+<nav style="text-align: right" ;>
+    <a href="https://41ibi.github.io/code_copycats/"><button  class="button-61" role="button">HOME</button></a><a href="https://41ibi.github.io/code_copycats/1-About%20us"><button  class="button-61" role="button">ABOUT</button></a>
+    <a href="https://41ibi.github.io/code_copycats/2-Our%20team"><button  class=" button-61 " role="button ">TEAM</button></a>
+    <a href="https://41ibi.github.io/code_copycats/3-Charter "><button class="button-61 " role="button ">CHARTER</button></a>
+    <a href="https://41ibi.github.io/code_copycats/4-Edition "><button  class="button-61 " role="button ">EDITION</button></a>
+    <a href="https://41ibi.github.io/code_copycats/5-Vocabulary"><button  class="button-61 " role="button ">VOCABULARY</button></a>
+    <a href="https://41ibi.github.io/code_copycats/6-Map"><button  class="button-61 " role="button ">MAP</button></a>
+</nav>
+
+<iframe src="https://www.google.com/maps/d/embed?mid=15XX0dFN-9keHLwKZf3hsz8lVvuMsfDM&hl=en&ehbc=2E312F" width="1000" height="500"></iframe>
